Change GPIO pin assignment for Arduino Shield

--- a/zone1/Makefile
+++ b/zone1/Makefile
@@ -6,7 +6,7 @@ BSP_BASE := ../bsp
 PLATFORM_DIR := $(BSP_BASE)/$(BOARD)
 NEWLIB_DIR := $(PLATFORM_DIR)/newlib
 
-LINKER_SCRIPT := flash.lds
+LINKER_SCRIPT := linker.lds
 
 C_SRCS += main.c
 
