Andes N22 RISC-V Summit 2019
hexfive-conf 0f9e1
hexfive-kern 9a649 - partial CLIC support

--- a/bsp/N22/multizone.cfg
+++ b/bsp/N22/multizone.cfg
@@ -1,22 +1,20 @@
 # Copyright(C) 2018 Hex Five Security, Inc. - All Rights Reserved 
 
-Tick = 10 # ms
+Tick = 0 # ms
 
 Zone = 1 
-	base = 0x80008000; size =   32K; rwx = rx # FLASH
+	base = 0x00008000; size =   32K; load = 0x80008000; rwx = rx # FLASH
 	base = 0x00201000; size =    4K; rwx = rw # RAM
 	base = 0xF0300000; size = 0x100; rwx = rw # UART
 
 Zone = 2
-	irq = 11
-	base = 0x80010000; size =      4K; rwx = rx # FLASH
+	irq = 25 # CLIC nt_src[7] GPIO
+	base = 0x00010000; size =      8K; load = 0x80010000; rwx = rx # FLASH
 	base = 0x00202000; size =      4K; rwx = rw # RAM
 	base = 0xF0700000; size =   0x100; rwx = rw # GPIO
-	base = 0xE4000000; size =0x400000; rwx = rw # PLIC
 	
 Zone = 3
-	base = 0x80011000; size =      4K; rwx = rx # FLASH
+	base = 0x00012000; size =      8K; load = 0x80012000; rwx = rx # FLASH
 	base = 0x00203000; size =      4K; rwx = rw # RAM
-	base = 0xF0100000; size =  0x2000; rwx = rw # SMU	
 	base = 0xF0700000; size =   0x100; rwx = rw # GPIO
 	base = 0xE6000000; size =       8; rwx = r  # RTC
