Add submodule ext/freertos V10.4.0-kernel-only-5-g375b08529

--- a/bsp/N22/openocd.cfg
+++ b/bsp/N22/openocd.cfg
@@ -1,6 +1,8 @@
-adapter_khz     10000
+# Copyright(C) 2020 Hex Five Security, Inc. - All Rights Reserved */
 
+adapter_khz 20000
 interface ftdi
+
 ftdi_device_desc "Dual RS232-HS"
 ftdi_vid_pid 0x0403 0x6010
 
@@ -16,7 +18,12 @@ jtag newtap $_CHIPNAME cpu -irlen 5 -expected-id 0x1000563D
 set _TARGETNAME $_CHIPNAME.cpu
 target create $_TARGETNAME riscv -chain-position $_TARGETNAME
 
-init
+#$_TARGETNAME configure -work-area-phys 0x80000000 -work-area-size 10000 -work-area-backup 1
+#flash bank spi1 lpcspifi 0x80000000 0 0 0 $_TARGETNAME
+#flash protect 0 64 last off
 
+#############################################################################################
+
+init
 halt
 echo "Ready for Remote Connections"
