--- a/zone2/Makefile
+++ b/zone2/Makefile
@@ -1,4 +1,4 @@
-# Copyright(C) 2018 Hex Five Security, Inc. - All Rights Reserved
+# Copyright(C) 2020 Hex Five Security, Inc. - All Rights Reserved
 
 TARGET = zone2.elf
 
@@ -10,9 +10,6 @@ LINKER_SCRIPT := linker.lds
 
 C_SRCS += main.c
 
-INCLUDES += -I../libhexfive
-LDFLAGS += -L../libhexfive
-LDFLAGS += $(if $(findstring rv64, $(RISCV_ARCH)), -lhexfive64,  $(if $(findstring rv32e, $(RISCV_ARCH)), -lhexfive32e, -lhexfive32))
+INCLUDES += -I ../
 
 include $(NEWLIB_DIR)/newlib.mk
-
