--- a/zone3/Makefile
+++ b/zone3/Makefile
@@ -1,4 +1,4 @@
-# Copyright(C) 2018 Hex Five Security, Inc. - All Rights Reserved
+# Copyright(C) 2020 Hex Five Security, Inc. - All Rights Reserved
 
 TARGET = zone3.elf
 
@@ -8,11 +8,8 @@ NEWLIB_DIR := $(PLATFORM_DIR)/newlib
 
 LINKER_SCRIPT := linker.lds
 
-C_SRCS += main.c owi_task.c
+C_SRCS += main.c owi_sequence.c
 
-INCLUDES += -I../libhexfive
-LDFLAGS += -L../libhexfive
-LDFLAGS += $(if $(findstring rv64, $(RISCV_ARCH)), -lhexfive64,  $(if $(findstring rv32e, $(RISCV_ARCH)), -lhexfive32e, -lhexfive32))
+INCLUDES += -I ../
 
 include $(NEWLIB_DIR)/newlib.mk
-
