Add bsp/N22-ILM bsp/N22-FLASH

--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -18,6 +18,20 @@ environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067144/RISCV/value=${HOME}/riscv-gnu-toolchain-20210807
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067144/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067144/appendContributed=false
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/BOARD/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/BOARD/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/BOARD/value=${ConfigName}
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/OPENOCD/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/OPENOCD/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/OPENOCD/value=${HOME}/riscv-openocd-20210807
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/PATH/value=${RISCV}/bin\:/usr/local/bin\:/usr/bin
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/RISCV/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/RISCV/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/RISCV/value=${HOME}/riscv-gnu-toolchain-20200613
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/BOARD/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/BOARD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/BOARD/value=${ConfigName}
