--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -18,34 +18,34 @@ environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067144/RISCV/value=${HOME}/riscv-gnu-toolchain-20210807
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067144/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1665067144/appendContributed=false
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/BOARD/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/BOARD/operation=append
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/BOARD/value=${ConfigName}
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/OPENOCD/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/OPENOCD/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/OPENOCD/value=${HOME}/riscv-openocd-20210807
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/PATH/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/PATH/value=${RISCV}/bin\:/usr/local/bin\:/usr/bin
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/RISCV/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/RISCV/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/RISCV/value=${HOME}/riscv-gnu-toolchain-20200613
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.777938164/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/BOARD/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/BOARD/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/BOARD/value=${ConfigName}
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/OPENOCD/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/OPENOCD/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/OPENOCD/value=${HOME}/riscv-openocd-20210807
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/PATH/value=${RISCV}/bin\:/usr/local/bin\:/usr/bin
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/RISCV/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/RISCV/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/RISCV/value=${HOME}/riscv-gnu-toolchain-20210807
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143.1774136172/appendContributed=false
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/BOARD/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/BOARD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/BOARD/value=${ConfigName}
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/OPENOCD/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/OPENOCD/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/OPENOCD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/OPENOCD/value=${HOME}/riscv-openocd-20210807
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/PATH/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/PATH/operation=replace
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/PATH/value=${RISCV}/bin\:/usr/local/bin\:/usr/bin
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/RISCV/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/RISCV/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/RISCV/value=${HOME}/riscv-gnu-toolchain-20200613
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/RISCV/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/RISCV/value=${HOME}/riscv-gnu-toolchain-20210807
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.1711890143/appendContributed=false
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.431242482/BOARD/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.431242482/BOARD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1603369180.431242482/BOARD/value=${ConfigName}
